@@ -1,3 +1,13 @@
+2021-08-20  Mark Lam  <mark.lam@apple.com>
+
+        Reduce StructureID entropy bits to 5 to make room for more StructureIDs.
+        https://bugs.webkit.org/show_bug.cgi?id=229326
+        rdar://60141624
+
+        Reviewed by Yusuke Suzuki.
+
+        * runtime/StructureIDTable.h:
+
 2021-08-19  Tim Nguyen  <ntim@apple.com>
 
         Implement ::backdrop pseudo element
